2005-04-07  Carl Worth  <cworth@cworth.org>

	* src/cairo-surface.c: (_cairo_surface_release_source_image),
	(_cairo_surface_release_dest_image),
	(_cairo_surface_clone_similar), (_cairo_surface_composite),
	(_cairo_surface_fill_rectangles),
	(_cairo_surface_composite_trapezoids), (_cairo_surface_copy_page),
	(_cairo_surface_show_page), (_cairo_surface_show_glyphs):

	Change to allow NULL backend function pointers to indicate
	unsupported functions.

	* src/cairo-glitz-surface.c:
	* src/cairo-image-surface.c:
	* src/cairo-pdf-surface.c:
	* src/cairo-ps-surface.c:
	* src/cairo-quartz-surface.c:
	* src/cairo-win32-surface.c:
	* src/cairo-xcb-surface.c:
	* src/cairo-xlib-surface.c: Eliminate stub functions and replace
	with NULL in surface backend table.

2005-04-07  Owen Taylor  <otaylor@redhat.com>

	* src/cairo.[ch] src/cairoint.h src/cairo-gstate.c 
	docs/public/cairo-sections.txt: 
	cairo_select_font() => cairo_select_font_face()
	cairo_scale_font() => cairo_set_font_size()
	cairo_transform_font() => cairo_set_font_matrix()
	Add cairo_get_font_matrix(). Make cairo_set_font_face()
	not reset the font matrix. Default the font matrix
	to SCALE(10). Document cairo_select_font_face().

	* test/coverage.c (draw) test/text-cache-crash.c (draw)
	test/text-rotate.c (draw): Use cairo_set_font_size().

	* src/cairo-font.c src/cairo.h: Fix up some parameter
	names for docs.

2005-04-07  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-win32-font.c: Fix various compilation errors.

2005-04-07  Carl Worth  <cworth@cworth.org>

	* src/cairo-gstate.c:
	* src/cairo-png.c:
	* src/cairo-win32-font.c:
	* src/cairo-win32-surface.c:
	* src/cairo-win32.h:
	* src/cairoint.h: Minor changes to header file inclusion
	recommended by Oleg Smolsky for better portability to MSVC.

2005-04-07  Carl Worth  <cworth@cworth.org>

	* src/cairo-png.c (PNG_SIG_SIZE): Use a preprocessor macro to get
	a literal value in the array size declaration, (for better